# ERDPS

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.trae/documents/: ERDPS_Product_Requirements.md
.vercel/: project.json
docs/: api-reference.md  configuration.md  installation.md  performance.md
scripts/: deploy-agent.ps1  gpo-deployment.ps1
src/agent/: Cargo.toml
src/agent/src/: agent.rs  communication.rs  config.rs  detection.rs  logging.rs  main.rs  monitor.rs  service.rs
src/agent/src/communication/: grpc_client.rs  heartbeat.rs  mod.rs  protocol.rs  reporting.rs  security.rs
src/agent/src/detection/: behavioral_engine.rs  mod.rs  yara_engine.rs
src/agent/src/monitoring/: file_monitor.rs  network_monitor.rs  process_monitor.rs  registry_monitor.rs
src/console/src/: App.tsx
src/console/src/components/Auth/: ProtectedRoute.tsx
src/console/src/components/Layout/: Layout.tsx
src/console/src/components/UI/: LoadingSpinner.tsx
src/console/src/contexts/: AuthContext.tsx  ThemeContext.tsx
src/console/src/pages/: Alerts.tsx  Dashboard.tsx  Endpoints.tsx  Login.tsx
src/pages/: Home.tsx
src/server/: package.json  tsconfig.json
src/server/src/: index.ts
src/server/src/cache/: RedisManager.ts
src/server/src/database/: DatabaseManager.ts
src/server/src/security/: SecurityManager.ts
src/server/src/services/: RedisManager.ts  SessionManager.ts
src/server/src/types/: config.ts  server.ts
src/server/src/utils/: Logger.ts
tests/: ransomware-simulation.ps1
