[package]
name = "erdps-agent"
version = "1.0.0"
edition = "2021"
authors = ["ERDPS Security Team <security@erdps.com>"]
description = "ERDPS Windows Agent - Real-time ransomware detection and prevention"
license = "PROPRIETARY"
repository = "https://github.com/company/erdps"
keywords = ["edr", "ransomware", "windows", "security", "endpoint"]
categories = ["security", "system"]
readme = "README.md"

[lib]
name = "erdps_agent"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "erdps-agent"
path = "src/main.rs"

[dependencies]
# Core Windows APIs
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_NetworkManagement_WNet",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory"
]}
winapi = { version = "0.3", features = ["full"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Networking and communication
tonic = "0.10"
prost = "0.12"
tonic-build = "0.10"
rustls = "0.22"
rustls-pemfile = "2.0"
tokio-rustls = "0.25"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
log = "0.4"

# Cryptography
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"
x509-parser = "0.15"

# File system monitoring
notify = "6.1"
walkdir = "2.4"
glob = "0.3"

# Process monitoring
sysinfo = "0.30"
psutil = "3.2"

# YARA integration
yara = "0.20"

# Configuration
config = "0.14"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Memory management
once_cell = "1.19"
parking_lot = "0.12"

# Database (embedded)
rusqlite = { version = "0.30", features = ["bundled"] }

# Compression
flate2 = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Registry manipulation
winreg = "0.52"

# Service management
windows-service = "0.6"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

# Security hardening
[profile.release.package."*"]
opt-level = 3

[features]
default = ["service", "realtime", "yara", "crypto"]
service = ["windows-service"]
realtime = ["notify"]
yara = ["yara"]
crypto = ["aes-gcm", "sha2", "hmac"]
debug-mode = []

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-pc-windows-msvc"]

# Windows-specific configuration
[target.'cfg(windows)'.dependencies]
wmi = "0.13"
ntapi = "0.4"

# Cargo audit configuration
[package.metadata.audit]
ignore = []

# Security advisory database
[package.metadata.advisory-db]
url = "https://github.com/RustSec/advisory-db"
vulnerability-db = true